testsuite/tests/overloadedrecflds/should_fail/NFSMixed.hs
{-# LANGUAGE DisambiguateRecordFields #-}

module NFSMixed where

import NFSMixedA

test = \x -> x { foo = 0 }
