testsuite/tests/overloadedrecflds/should_fail/NFSMixed.stderr

NFSMixed.hs:5:18: error:
    Ambiguous occurrence ‘foo’
    It could refer to
       either ‘NFSMixedA.foo’,
              imported from ‘NFSMixedA’ at NFSMixed.hs:3:1-16
              (and originally defined at NFSMixedA.hs:8:1-3)
           or the field ‘foo’,
              imported from ‘NFSMixedA’ at NFSMixed.hs:3:1-16
              (and originally defined at NFSMixedA.hs:5:18-20)
           or the field ‘foo’,
              imported from ‘NFSMixedA’ at NFSMixed.hs:3:1-16
              (and originally defined at NFSMixedA.hs:4:18-20)
